[project]
name = "repowalker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "python-dotenv",
    "colorama",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "mypy",
    "colorama",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
